--- a/local.yml
+++ b/local.yml
@@ -18,3 +18,7 @@
             path: /etc/X11/Xwrapper.config
             regexp: "^allowed_users="
             line: allowed_users=anybody
+    - name: Install packages
+      apt:
+        name:
+          - firefox
