--- a/local.yml
+++ b/local.yml
@@ -32,6 +32,11 @@
             path: /etc/X11/Xwrapper.config
             regexp: "^allowed_users="
             line: allowed_users=anybody
+        - name: Start it at login
+          lineinfile:
+            path: "{{ ansible_env.HOME }}/.profile"
+            regexp: " exec startx "
+            line: 'if [[ "${XDG_VTNR}" -eq 1 ]]; then exec startx ; fi'
     - name: Install packages
       become: true
       apt:
